--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -4,12 +4,12 @@
   <h3>
     <%= @parameter[:full_name] %>
   </h3>
-  <h4>Course</h4>
-  <h3>
-    <%= @parameter[:course] %>
-  </h3>
-  <h4>Grade level</h4>
+  <h4>Year</h4>
   <h3>
     <%= @parameter[:grade_level] %>
+  </h3>
+  <h4>Age</h4>
+  <h3>
+    <%= @parameter[:age] %>
   </h3>
 </div>
